# arangodb

./: .gitignore  CLAUDE.md  README.md  SEMANTIC_SEARCH_FIX_COMPLETE.md  add_extract_rationale.py  add_sparta_to_cli.patch  arangodb_mcp.json  check_embedding_format.py  constants_update.py  debug_index_validation.py  edge_creation_analysis.md  extract_fix.py  final_llm_utils_thinking.py  final_recommendation_test.py  fix_embedding_consistency.py  fix_sparta_commands.py  fix_sparta_final.py  fix_sparta_fstrings.py  force_update_embeddings.py  gemini25_reasoning_test.py  gemini25_thinking_test.py  gemini_reasoning_test.py  mcp_config.json  mcp_config_updated.json  ml_tree.html  modify_functions.py  pyproject.toml  pyproject.toml.bak  replace_llm_utils.py  simple_mcp.json  temp_constants_final.py  temp_constants_update.py  temp_constants_update2.py  temp_fix.py  temp_fix2.py  temp_fix3.py  temp_fix4.py  temp_vertex_test.py  test_cli_validation.py  test_compaction_cli.sh  (+12 more)
docs/: BETA_ANNOUNCEMENT.md  BETA_RELEASE_NOTES.md  CAPABILITIES_AND_LIMITATIONS.md  CLEANUP_SUMMARY.md  INDEX.md  INNOVATION_REPORT.md  README.md  SYSTEM_OVERVIEW.md  migration_plan.md  task_104_completion_summary.md  test_report_comprehensive.md
qa_output/: output.json  qa_unsloth_20250518_202358.stats.json  qa_unsloth_20250518_202611.stats.json  qa_unsloth_20250519_163755.stats.json  qa_unsloth_20250519_163845.stats.json  qa_unsloth_20250519_221253.stats.json  section_summaries_export.stats.json  test_export.json  test_export.stats.json
scripts/: README.md  agent_memory_usage_example.py  cli_json_output.sh  cli_verification.sh  cli_verification_fixed.sh  conf.py  debug_crud_list.py  extract_issues.py  fix_output_format_params.py  generate_sparta_visualization.py  generate_test_summary.py  iterate.py  quick_cli_test.py  quick_test.sh  requirements.json  run_full_test_report.py  run_quick_tests.sh  run_tests.py  run_tests.sh  standardize_field_names.py  task_converter2.py  task_utils.py  test_marker_integration.py  test_single_crud.py  test_unsloth_export.py  track_progress.py  validate_all_cli_commands.py  validate_all_commands.py  validate_visualization_system.py
static/: d3_test.html  force_arango_test.html  force_basic_test.html  force_large_test.html  force_physics_test.html  radial_test.html  responsive_test.html  sankey_test.html  svg_test.html  test_visualization.html  tree_test.html
test_reports/: arangodb-module_test_report.txt  test_report_complete_test_suite_20250525_164838.md  test_report_complete_test_suite_20250525_165029.md  test_report_complete_test_suite_20250525_172735.md  test_report_complete_test_suite_20250525_182001.md  test_report_complete_test_suite_20250526_071236.md  test_report_complete_test_suite_20250526_072554.md  test_report_complete_test_suite_20250526_112629.md  test_report_comprehensive_20250526_113000.md
test_results/: test_report_complete_test_suite_20250604_170454.md
tests/: README.md  conftest.py  improve_test_conversion.py  run_tests.py  test_basic.py  test_honeypot.py
visualizations/: agent_memory_graph.html  document_memory_network.html  example_table.html  force_14nodes_.html  force_3nodes_.html  force_5nodes_.html  index.html  memory_bank_graph.html  message_flow.html  test_results.json  (+1 more)
(+557 files in other folders)
